# service-policy-kit

./: Cargo.toml  README.md
.github/workflows/: build.yml
examples/: quick-start.rs
src/: bench.rs  cert.rs  content.rs  data.rs  lib.rs  matcher.rs  runner.rs  sender.rs  vars.rs
src/discovery/: mod.rs  open_api.rs
src/fixtures/: json.yaml  ok-then-error.yaml  ok.yaml  simple.yaml  with-defaults.yaml
src/reporters/: console_output.rs  json_output.rs  junit_output.rs  mod.rs  reporter.rs
