[package]
name = "service_policy_kit"
version = "0.6.0"
authors = ["Dotan Nahum <jondotan@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A toolkit to verify services against security policies"


[lib]
name = "service_policy_kit"

[dependencies]
reqwest={version = "0.11.4", features=["blocking", "json"] }
serde="1"
serde_json="1"
serde_derive="1"
serde_yaml="0.7.5"
fancy-regex="0.7.1"
log="0.4.14"
env_logger="0.9.0"
histogram="0.6.9"
atty="0.2.14"
native-tls = "0.2.8"
x509-parser = "0.4.1"
chrono = "0.4.6"
junit-report="0.6.0"
subprocess = "0.1.18"
difference = "2.0.0"
openapi = "0.1.5"
anyhow = "1.0.44"
console = "0.14.1"
maplit="1.0.2"
rusoto_core = "0.47.0"

[dev-dependencies]
mockito = "0.30.0"

