[package]
name = "service_policy_kit"
version = "0.7.1"
authors = ["Dotan Nahum <jondotan@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A toolkit to verify services against security policies"
repository = "https://github.com/SpectralOps/service-policy-kit"


[lib]
name = "service_policy_kit"

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1" }
serde_json = { version = "1" }
serde_derive = { version = "1" }
serde_yaml = { version = "0.9" }
fancy-regex = { version = "0.13.0" }
log = { version = "0.4.14" }
# env_logger = { version = "0.9.0" }
histogram = { version = "0.6.9" }
# atty = { version = "0.2.14" }
native-tls = { version = "0.2.8" }
x509-parser = { version = "0.4.1" }
chrono = { version = "0.4.6" }
junit-report = { version = "0.6.0" }
subprocess = { version = "0.2.9" }
difference = { version = "2.0.0" }
openapi = { version = "0.1.5" }
anyhow = { version = "1.0.44" }
console = { version = "0.14.1" }
maplit = { version = "1.0.2" }
rusoto_core = { version = "0.48.0" }

[dev-dependencies]
mockito = "0.30.0"
